[project]
name = "comfyui-simple-utility-nodes"
version = "1.2.0"
description = "A collection of simple utility nodes for ComfyUI including time-related, string manipulation, markdown rendering, switch, and script nodes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
]
authors = [
    {name = "ComfyUI Simple Utility Nodes"}
]
keywords = ["comfyui", "nodes", "utility", "timer", "string", "datetime", "switch", "script", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AkihaTatsu/ComfyUI-Simple-Utility-Nodes"
Repository = "https://github.com/AkihaTatsu/ComfyUI-Simple-Utility-Nodes"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
